feat: ortographic errors corrected

--- a/series_time.ipynb
+++ b/series_time.ipynb
@@ -248,7 +248,7 @@
    "id": "58d82a87",
    "metadata": {},
    "source": [
-    "Se puede observar como Diesel es el conbustible que más consume, pero también es el mayor variabilidad. El caso contrario es el gas licuado, el cual es el menos consumido y también el que posee menor dispersión. En medio tenemos la gasolina Super y Regular, siendo Super ligeramente más estable que Regular, pero sin superar al Gas licuado."
+    "Se puede observar como Diesel es el combustible que más consume, pero también es el mayor variabilidad. El caso contrario es el gas licuado, el cual es el menos consumido y también el que posee menor dispersión. En medio tenemos la gasolina Super y Regular, siendo Super ligeramente más estable que Regular, pero sin superar al Gas licuado."
    ]
   },
   {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "11a3de8b",
    "metadata": {},
    "outputs": [
@@ -411,7 +411,6 @@
     }
    ],
    "source": [
-    "# ─── Bloque X: Evaluación de residuos para modelos aditivo, multiplicativo y STL ───\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -421,7 +420,6 @@
     "metodos = ['additive', 'multiplicative', 'STL']\n",
     "residuos_summary = []\n",
     "\n",
-    "# Prepara una figura con filas = métodos y columnas = combustibles\n",
     "fig, axes = plt.subplots(len(metodos), len(df_consumo.columns), figsize=(20, 12))\n",
     "\n",
     "for i, metodo in enumerate(metodos):\n",
@@ -441,7 +439,6 @@
     "            'Media': resid.mean(),\n",
     "            'Std': resid.std()\n",
     "        })\n",
-    "        # Histograma de residuos\n",
     "        ax = axes[i, j]\n",
     "        sns.histplot(resid, kde=True, ax=ax)\n",
     "        ax.set_title(f\"{metodo.capitalize()} – {col}\")\n",
@@ -451,7 +448,6 @@
     "fig.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# Crear y mostrar un resumen tabular de medias y desviaciones\n",
     "res_df = pd.DataFrame(residuos_summary)\n",
     "resumen = res_df.pivot(index='Combustible', columns='Método', values=['Media', 'Std'])\n",
     "print(resumen)\n"
@@ -1920,7 +1916,6 @@
     }
    ],
    "source": [
-    "# ─── Bloque X: Modelos Prophet, Holt–Winters y Red Neuronal para Super y Diesel ───\n",
     "import pandas as pd\n",
     "from prophet import Prophet\n",
     "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
@@ -1928,7 +1923,6 @@
     "from sklearn.metrics import mean_squared_error\n",
     "import numpy as np\n",
     "\n",
-    "# Función para crear features de retardos para la red neuronal\n",
     "def make_lag_features(series, nlags=12):\n",
     "    df = pd.DataFrame(series)\n",
     "    for lag in range(1, nlags+1):\n",
@@ -1938,10 +1932,8 @@
     "    y = df[series.name].values\n",
     "    return X, y\n",
     "\n",
-    "# Selección de series\n",
     "series_list = ['Gasolina Super', 'Diesel']\n",
     "\n",
-    "# Diccionarios para almacenar los modelos\n",
     "prophet_models = {}\n",
     "hw_models      = {}\n",
     "mlp_models     = {}\n",
@@ -1989,7 +1981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "cab171c8",
    "metadata": {},
    "outputs": [
@@ -2015,10 +2007,10 @@
     }
    ],
    "source": [
-    "# ─── Bloque X: Comparación de RMSE para Prophet, Holt–Winters y MLP ───\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "# Intentamos importar Prophet con fallback\n",
+    "\n",
     "try:\n",
     "    from prophet import Prophet\n",
     "    prophet_available = True\n",
@@ -2032,12 +2024,11 @@
     "comparison_results = []\n",
     "\n",
     "for col in series_list:\n",
-    "    # 1) Preparar train-test split\n",
     "    series = df_consumo[col]\n",
     "    split = int(len(series) * 0.8)\n",
     "    train, test = series.iloc[:split], series.iloc[split:]\n",
     "    \n",
-    "    # 2) Prophet (si está instalado)\n",
+    "\n",
     "    if prophet_available:\n",
     "        df_train = train.reset_index().rename(columns={'index':'ds', col:'y'})\n",
     "        m_prop = Prophet(yearly_seasonality=True, weekly_seasonality=False, daily_seasonality=False)\n",
@@ -2049,7 +2040,6 @@
     "    else:\n",
     "        rmse_prop = np.nan\n",
     "    \n",
-    "    # 3) Holt–Winters aditivo\n",
     "    hw_model = ExponentialSmoothing(\n",
     "        train,\n",
     "        trend='add',\n",
@@ -2059,7 +2049,6 @@
     "    y_pred_hw = hw_model.forecast(len(test))\n",
     "    rmse_hw = np.sqrt(mean_squared_error(test.values, y_pred_hw.values))\n",
     "    \n",
-    "    # 4) Red neuronal (MLP) — usa el RMSE calculado antes en mlp_results\n",
     "    rmse_mlp = mlp_results[col]['RMSE']\n",
     "    \n",
     "    comparison_results.append({\n",
@@ -2069,7 +2058,6 @@
     "        'RMSE_MLP': rmse_mlp\n",
     "    })\n",
     "\n",
-    "# 5) Mostrar resultados en un DataFrame\n",
     "results_df = pd.DataFrame(comparison_results).set_index('Serie')\n",
     "print(results_df)\n"
    ]
